compilation working on windows